label and radio position fix

--- a/public/mocks/create-button.html
+++ b/public/mocks/create-button.html
@@ -103,7 +103,9 @@
                     <div class="sub-config">
                       <a href="javascript:void(0)" class="title-toggle">Incompatible Browser configuration</a>
                       <div class="options-wrap">
-                        Incompatible Browser configuration options
+                        <div class="form-group">
+                          <label class="control-label"><input class="" type="radio"> Hide the widget</label>
+                        </div>
                       </div>
                     </div>
                   </div>
