change footer color depending on widget background

--- a/public/mocks/create-button.html
+++ b/public/mocks/create-button.html
@@ -120,7 +120,10 @@
                     <div class="prev-view light">
                       <div class="widget-box style-b">
                         <button class="btn-style"><span>Call Sales</span></button>
-                        <div class="widget-footer">
+                        <div class="widget-footer-left">
+                          <a href="#">Test your set up</a>
+                        </div>
+                        <div class="widget-footer-right">
                           <a href="#">powered by:</a>
                         </div>
                       </div>
