btn responsive fix

--- a/public/mocks/create-button.html
+++ b/public/mocks/create-button.html
@@ -61,8 +61,8 @@
                     </div>
                     <div class="form-group">
                       <label>Button Sytle:</label>
-                      <button class="btn-style-a"><span>Call Sales</span></button>
-                      <button class="btn-style-b"><span>Call Sales</span></button>
+                      <button class="btn-style-a"><span>Call Sales Call Sales Call Sales Call Sales</span></button>
+                      <button class="btn-style-b"><span>Call Sales Call Sales Call Sales Call Sales</span></button>
                     </div>
 
                   </div>
