--- a/public/mocks/create-button.html
+++ b/public/mocks/create-button.html
@@ -61,8 +61,8 @@
                     </div>
                     <div class="form-group">
                       <label>Button Sytle:</label>
-                      <button class="btn-style-a"><span>Call Sales Call Sales Call Sales Call Sales</span></button>
-                      <button class="btn-style-b"><span>Call Sales Call Sales Call Sales Call Sales</span></button>
+                      <button class="btn-style-a"><span>Call Sales</span></button>
+                      <button class="btn-style-b"><span>Call Sales</span></button>
                     </div>
 
                   </div>
@@ -119,7 +119,7 @@
                   <div class="boxPanel preview">
                     <div class="prev-view light">
                       <div class="widget-box style-b">
-                        <button class="btn-style"><span>Call Sales Call Sales Call Sales</span></button>
+                        <button class="btn-style"><span>Call Sales Call Sales Call Sales Call Sales</span></button>
                         <div class="widget-footer-left">
                           <a href="#">Test your set up</a>
                         </div>
