--- a/public/mocks/widget-01.html
+++ b/public/mocks/widget-01.html
@@ -22,6 +22,41 @@
 
     <iframe src="https://www.webrtc.ventures"></iframe>
 
+    <div style="position: absolute; top:100px; left: 100px; z-index: 100;">
+      <div class="boxPanel preview">
+        <div class="prev-view light">
+          <div class="widget-box style-b">
+            <button class="btn-style"><span>Call Sales </span></button>
+            <div class="widget-footer-left">
+              <a href="#">Test your set up</a>
+            </div>
+            <div class="widget-footer-right">
+              <a href="#">powered by:</a>
+            </div>
+          </div>
+          <div class="togle-bg">
+            <a href="javascript:void(0)" class="dark"></a>
+            <a href="javascript:void(0)" class="grey"></a>
+            <a href="javascript:void(0)" class="light"></a>
+          </div>
+        </div>
+        <div class="prev-code">
+          <div class="title">
+            <span>Code Widget</span>
+            <p>Paste the following HTML code into your websiteor give it a try using on <a href="#">JSFiddle</a></p>
+          </div>
+          <div class="widget-code-wrap">
+            code here
+            <div class="codebox-actions">
+              <a href="#">Copy</a>
+              <a href="#">Email Instructions</a>
+              <a href="#">Regenerate Code</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="vox-widget-wrapper">
       <div class="vw-main">
         <div class="vw-header">
