[vxb-html-2] Styles and structure improvements (#145)
* folder removal

* button list moks page

* new sip modal call

* error alert style

* header fix

* [vxb-html-2] Integrating grunt task to compile less to css

* small ui fixes

--- a/public/mocks/create-button.html
+++ b/public/mocks/create-button.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         
     <!-- Styles -->
-    <link rel="stylesheet" href="../../stylesheets/root.css">
+    <link rel="stylesheet" href="../stylesheets/root.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,8 +26,8 @@
       <div class="container">
         <nav class="navbar">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#"></a>
-            <span class="subBrand"> WebRtc Beta</span>
+            <a class="navbar-brand" href="#" style="background-image: url(https://click2vox-com-staging.herokuapp.com/images/navbar-brand.png)"></a>
+            <span class="subBrand"> Voxbone WebRTC Beta</span>
           </div>
           <div class="pull-right">
             <a class="login withripple" href="#">Login</a>
