[vxb-sign-up-2] Add wizard (#162)
* folder removal

* button list moks page

* new sip modal call

* error alert style

* header fix

* [vxb-html-2] Integrating grunt task to compile less to css

* small ui fixes

* updates

* button list grouping

* button list grouping

* landing page mock

* step ui for adding new SIP

* landing page new styles

* [vxb-sign-up-2] Add Wizard

--- a/public/mocks/button-list.html
+++ b/public/mocks/button-list.html
@@ -10,7 +10,6 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
     <!-- Styles -->
     <link rel="stylesheet" href="../stylesheets/root.css">
 
@@ -50,17 +49,24 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
+                <div class="group-header">
+                  <h4><i class="caretDown"></i><span>SIP: Mariana@ivs.voxbone.com</span></h4>
+                  <div class="group-header-actions">
+                    <a href="#">Edit</a>
+                    <span class="divider">|</span>
+                    <a href="#">Delete</a>
+                  </div>
+                </div>
                 <table class="table">
-
                   <thead>
                     <tr>
                       <td>SIP URI</td>
                       <td>Sales btn</td>
                       <td>btn Label</td>
-                      <td class="text-right">Actions</td>
+                      <td class="text-right">Actions</td>                      
                     </tr>
                   <thead>
-
+                    
                   <tbody>
                     <tr>
                       <td>mariana@ivrs.voxbone.com</td>
@@ -101,11 +107,22 @@
                   </tbody>
                 </table>
               </div>
+
+              <div class="col-xs-12">
+                <div class="group-header">
+                  <h4><i class="caretRight"></i><span>SIP: Santiago@ivs.voxbone.com</span></h4>
+                  <div class="group-header-actions">
+                    <a href="#">Edit</a>
+                    <span class="divider">|</span>
+                    <a href="#">Delete</a>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
       </div>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
