--- a/public/mocks/click-to-call.html
+++ b/public/mocks/click-to-call.html
@@ -8,7 +8,7 @@
 	<script type="application/x-javascript">
 	   addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
 	</script><!--//for-mobile-apps-->
-	<link href="http://localhost:3000/stylesheets/root.css" rel="stylesheet">
+	<link href="../../stylesheets/root.css" rel="stylesheet">
 	<link href=
 	"https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
 	id="font-awesome-css" media="screen" rel="stylesheet" type="text/css">
