--- a/public/mocks/login.html
+++ b/public/mocks/login.html
@@ -46,9 +46,9 @@
         <div class="row">
           <div class="col-xs-5">
         
-            <div class="register-content">
+            <div class="panel-content">
 
-              <div class="reg-header">
+              <div class="panel-header">
                 <h4>Login</h4>
                 <strong>
                   Note for current Voxbone customers:
