--- a/public/mocks/edit-button.html
+++ b/public/mocks/edit-button.html
@@ -1,3 +1,78 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>The Workshop by Voxbone</title><!--for-mobile-apps-->
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+  <meta content="The Workshop Click-to-Call" name="keywords">
+  <script type="application/x-javascript">
+     addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
+  </script><!--//for-mobile-apps-->
+  <link href="../../stylesheets/root.css" rel="stylesheet">
+  <link href=
+  "https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
+  id="font-awesome-css" media="screen" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+
+  <!-- Modal  -->
+  <div class="modal-backdrop fade in"></div>
+  <div class="modal fade in" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: flex">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content edit-sip">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+          <h4 class="modal-title" id="myModalLabel">Edit SIP URI</h4>
+        </div>
+        <div class="modal-body">
+
+          <div class="form-group">
+            <label for="exampleInputName2">SIP URI</label>
+            <input type="text" class="form-control" placeholder="timeivr@sipvox1.voxbone.com">
+          </div>
+
+        </div>
+        <div class="modal-footer">
+          <a class="btn btn-default-custom" href="#">Save SIP URI</a>
+          <a class="btn btn-default-custom" href="#">Cancel</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal  -->
+
+
+  <div class="site-wrapper">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button class="navbar-toggler pull-right hidden-md-up" type="button" data-toggle="collapse" data-target="#bd-main-nav" aria-controls="bd-main-nav" aria-expanded="false" aria-label="Toggle navigation">☰</button>
+          <img alt="logo" src="../../images/LogoClick"></a>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-toggleable-sm pull-right" id="bd-main-nav">
+          <ul class="nav navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-item nav-link " href="homectc.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link " href="homectc.html">Buttons</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link " href="profile.html">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link " href="click-to-call.html">Logout</a>
+            </li>
+          </ul>
+        </div>
+      </div><!-- container -->
+    </nav>
 
 		<div class="site-wrapper-inner home-wrap">
 
