--- a/public/mocks/edit-button.html
+++ b/public/mocks/edit-button.html
@@ -16,36 +16,8 @@
 
 <body>
 
-  <!-- Modal  -->
-  <div class="modal-backdrop fade in"></div>
-  <div class="modal fade in" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: flex">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content edit-sip">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-          <h4 class="modal-title" id="myModalLabel">Edit SIP URI</h4>
-        </div>
-        <div class="modal-body">
-
-          <div class="form-group">
-            <label for="exampleInputName2">SIP URI</label>
-            <input type="text" class="form-control" placeholder="timeivr@sipvox1.voxbone.com">
-          </div>
-
-        </div>
-        <div class="modal-footer">
-          <a class="btn btn-default-custom" href="#">Save SIP URI</a>
-          <a class="btn btn-default-custom" href="#">Cancel</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Modal  -->
-
-
   <div class="site-wrapper">
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
 
@@ -57,24 +29,18 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-toggleable-sm pull-right" id="bd-main-nav">
           <ul class="nav navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-item nav-link " href="homectc.html">Home</a>
+            <li class="nav-item">
+              <a class="nav-item nav-link " href="#">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-item nav-link " href="homectc.html">Buttons</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-item nav-link " href="profile.html">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-item nav-link " href="click-to-call.html">Logout</a>
+              <a class="nav-item nav-link " href="#">Create Account</a>
             </li>
           </ul>
         </div>
-      </div><!-- container -->
+      </div>
     </nav>
 
-		<div class="site-wrapper-inner home-wrap">
+    <div class="site-wrapper-inner home-wrap">
 
       <div class="container">
         <div class="row">
@@ -96,74 +62,74 @@
 
                   <div class="col-sm-12 col-lg-6">
 
-                		<div class="form-group">
-                			<label for="config-name">Configuration Name</label>
-                			<input class="form-control" id="config-name" placeholder="i.e. Sales Button" type="text">
-                		</div>
+                    <div class="form-group">
+                      <label for="config-name">Configuration Name</label>
+                      <input class="form-control" id="config-name" placeholder="i.e. Sales Button" type="text">
+                    </div>
 
                     <span class="form-header">Button Configuration</span>
-                		<div class="form-group">
-                			<label for="config-label">Button Label</label>
-                			<input class="form-control" id="config-name" placeholder="i.e. Call Sales" type="text">
-                		</div>
+                    <div class="form-group">
+                      <label for="config-label">Button Label</label>
+                      <input class="form-control" id="config-name" placeholder="i.e. Call Sales" type="text">
+                    </div>
 
-                		<div class="form-group inline-btn">
-                			<label>Button Style</label>
+                    <div class="form-group inline-btn">
+                      <label>Button Style</label>
                       <button type="submit" class="btn btn-lg btn-info">Click-to-call</button>
                       <button type="submit" class="btn btn-lg btn-purple">Click-to-call</button>
-                		</div>
+                    </div>
 
                     <span class="form-header">Call Configuration</span>
-                		<div class="form-group">
-                			<label for="config-label">SIP URI <i class="fa fa-question-circle tooltip-action ta-white" aria-hidden="true"></i></label>
+                    <div class="form-group">
+                      <label for="config-label">SIP URI <i class="fa fa-question-circle tooltip-action ta-white" aria-hidden="true"></i></label>
 
-                			<select class="form-control">
-                  			<option>Select a SIP URI</option>
-                  			<option>Option</option>
-                  			<option>Option</option>
-                  			<option>Option</option>
-                			</select>
+                      <select class="form-control">
+                        <option>Select a SIP URI</option>
+                        <option>Option</option>
+                        <option>Option</option>
+                        <option>Option</option>
+                      </select>
 
-                			<div class="expand-block open-block">
-                  			<span class="head">Advanced Call Configuration</span>
+                      <div class="expand-block open-block">
+                        <span class="head">Advanced Call Configuration</span>
 
-                    		<div class="form-group">
-                    			<label for="">Caller Id <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
-                    			<input class="form-control" id="" placeholder="i.e. ClickVox_Demo" type="text">
-                    		</div>
+                        <div class="form-group">
+                          <label for="">Caller Id <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
+                          <input class="form-control" id="" placeholder="i.e. ClickVox_Demo" type="text">
+                        </div>
 
-                    		<div class="form-group">
-                    			<label for="">Context <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
-                    			<input class="form-control" id="" type="text">
-                    		</div>
+                        <div class="form-group">
+                          <label for="">Context <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
+                          <input class="form-control" id="" type="text">
+                        </div>
 
-                    		<div class="form-group">
-                    			<label for="check01"><input type="checkbox" id="check01">DTMF Dial Pad <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
-                    		</div>
+                        <div class="form-group">
+                          <label for="check01"><input type="checkbox" id="check01">DTMF Dial Pad <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
+                        </div>
 
-                    		<div class="form-group">
-                    			<label for="">Send Digits <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
-                    			<input class="form-control" id="" type="text">
-                    		</div>
+                        <div class="form-group">
+                          <label for="">Send Digits <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
+                          <input class="form-control" id="" type="text">
+                        </div>
 
-                			</div>
+                      </div>
 
 
-                			<div class="expand-block open-block">
-                  			<span class="head">Incompatible Browser Configuration</span>
-                    		<div class="form-group">
-                    			<label for="radio01"><input type="radio" id="radio01">Hide the Widget <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
-                    		</div>
-                    		<div class="form-group">
-                    			<label for="radio02"><input type="radio" id="radio02">Link button to a page <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
-                    		</div>
-                    		<div class="form-group">
-                    			<label for="radio03"><input type="radio" id="radio03">Show text/HTML <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
-                    		</div>
+                      <div class="expand-block open-block">
+                        <span class="head">Incompatible Browser Configuration</span>
+                        <div class="form-group">
+                          <label for="radio01"><input type="radio" id="radio01">Hide the Widget <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
+                        </div>
+                        <div class="form-group">
+                          <label for="radio02"><input type="radio" id="radio02">Link button to a page <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
+                        </div>
+                        <div class="form-group">
+                          <label for="radio03"><input type="radio" id="radio03">Show text/HTML <i class="fa fa-question-circle tooltip-action" aria-hidden="true"></i></label>
+                        </div>
 
-                			</div>
+                      </div>
 
-                		</div>
+                    </div>
                   </div>
 
 
@@ -180,26 +146,26 @@
           </div>
         </div>
       </div>
-		</div>
+    </div>
 
 
 
   </div><!-- Start-Smooth-Scrolling -->
-	<script src="js/jquery.min.js">
-	</script>
-	<script src="js/bootstrap.min.js">
-	</script>
-	<script src="js/move-top.js" type="text/javascript">
-	</script>
-	<script src="js/easing.js" type="text/javascript">
-	</script>
-	<script type="text/javascript">
-	          jQuery(document).ready(function($) {
-	              $(".scroll").click(function(event){
-	                  event.preventDefault();
-	                  $('html,body').animate({scrollTop:$(this.hash).offset().top},2000);
-	              });
-	          });
-	</script> <!-- //End-Smooth-Scrolling -->
+  <script src="js/jquery.min.js">
+  </script>
+  <script src="js/bootstrap.min.js">
+  </script>
+  <script src="js/move-top.js" type="text/javascript">
+  </script>
+  <script src="js/easing.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+            jQuery(document).ready(function($) {
+                $(".scroll").click(function(event){
+                    event.preventDefault();
+                    $('html,body').animate({scrollTop:$(this.hash).offset().top},2000);
+                });
+            });
+  </script> <!-- //End-Smooth-Scrolling -->
 </body>
 </html>
